<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textSize="18sp" />

            <SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:iconifiedByDefault="false"
                android:inputType="text"
                android:queryHint="@string/search_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            android:paddingRight="20sp">

            <LinearLayout
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/price_range"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/from_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/from_editText"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/from_editText"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/to_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/to_textView" />

                <EditText
                    android:id="@+id/to_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/to_editText"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/to_editText"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dairy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/contains_dairy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:layout_weight="1"
                    android:text="@string/contains_dairy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/allergy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/allergy_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/allergy_info" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/eggs"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/eggs" />

                    <CheckBox
                        android:id="@+id/peanuts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peanuts" />

                    <CheckBox
                        android:id="@+id/wheat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wheat" />

                    <CheckBox
                        android:id="@+id/soy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soy" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/search_button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>